# Third-Chair

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  start.sh
docs/: user_guide.html
tests/: conftest.py
tests/fixtures/: __init__.py  sample_case.json
tests/integration/: test_cli_commands.py
tests/unit/: test_intent_extractor.py  test_models_case.py  test_models_evidence.py  test_vault.py  test_work_models.py  test_work_storage.py
third_chair/: __init__.py
third_chair/analysis/: __init__.py  proposition_extractor.py  skanda_evaluator.py
third_chair/chat/: __init__.py  intent_extractor.py  registry.py  tools.py
third_chair/cli/: main.py
third_chair/config/: settings.py
third_chair/documents/: __init__.py  docx_parser.py  image_processor.py  pdf_extractor.py  vision_analyzer.py
third_chair/ingest/: __init__.py  file_classifier.py  metadata_parser.py  toc_parser.py  zip_extractor.py
third_chair/models/: __init__.py  case.py  evidence.py  proposition.py  transcript.py  witness.py
third_chair/reports/: __init__.py  attorney_report.py  docx_generator.py  evidence_inventory.py  pdf_generator.py  viewing_guide.py
third_chair/staging/: __init__.py  manager.py  preview.py  watcher.py
third_chair/summarization/: __init__.py  case_summarizer.py  ollama_client.py  timeline_builder.py  transcript_summarizer.py
third_chair/transcription/: __init__.py  diarize.py  media_processor.py  segment_consolidator.py  whisper_transcribe.py
third_chair/translation/: __init__.py  language_detector.py  ollama_translator.py  phrase_extractor.py
third_chair/tui/: __init__.py  app.py  screens.py  staging_screen.py  vault_screen.py  widgets.py
third_chair/utils/: __init__.py  hash.py  logging.py  places.py
third_chair/vault/: __init__.py  config.py  crypto.py  exceptions.py  file_wrapper.py  migration.py  session.py  vault_manager.py
third_chair/witnesses/: __init__.py  speaker_roles.py  witness_importer.py  witness_matcher.py
third_chair/work/: __init__.py  ai_assistant.py  models.py  storage.py
third_chair/workbench/: __init__.py  config.py  database.py  models.py
third_chair/workbench/detection/: __init__.py  detector.py  inconsistency.py  timeline.py
(+6 files in other folders)
